--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -935,7 +935,7 @@ wir
 \[
 s=-\frac{v^tv}{v^tAv}.
 \]
-Damit k"onnen wir den Algorithmus jetzt ausformulieren:
+Damit k"onnen wir den Algorithmus des steilsten Abstiegs jetzt ausformulieren:
 \begin{enumerate}
 \item W"ahle eine beliebige Anfangsapproximation $x_1$ der L"osung
 \item Berechne den Gradienten $v=Ax_i-b$ von $J$ an der Stelle
