--- a/skript/algorithm.tex
+++ b/skript/algorithm.tex
@@ -25,7 +25,7 @@ Aber auch die Berechnung der Eigenwerte als Nullstellen ist, abgesehen
 von den numerischen Problemen dieses Unterfangens, in keiner Weise
 parallelisierbar.
 
-Das Eigenwertproblem ist nur eines von vielen praktische wichtigen
+Das Eigenwertproblem ist nur eines von vielen praktisch wichtigen
 Problemen, f"ur welches die Methoden, die man meist als erste lernt,
 nicht geeignet sind. Auch die L"osung eines linearen Gleichungssystems
 mit dem Gauss-Algorithmus wird unpraktikabel, wenn das Gleichungssystem
